welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value vuBiscuit
	if (vuBiscuit()==true) {return true} else {return false}
            ^