welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	if (vuBiscuit()==true) {return true} else {return false}
	
}
